# 1

./: .env.example  EXPLICACION_PROYECTO.md  README.md  pyproject.toml  vcdiligence.db
tests/: __init__.py  test_auth.py  test_crew.py  test_endpoints.py  test_llm_manager.py  test_new_features.py  test_parser.py  test_pdf.py  test_public_apis.py  test_scraper.py  test_validator.py
vcdiligence/: app.py  auth.py  benchmark.py  celery_app.py  crew.py  database.py  llm_manager.py  logging_config.py  monitoring.py  parser.py  pdf_generator.py  public_apis.py  scraper.py  security.py  seed.py  tasks.py  validator.py
vcdiligence/cache/: example.com.json  result_stripe.com.json  result_vcdiligence.com.json
vcdiligence/cache/public_apis/: github_Stripe.json
vcdiligence/config/: agents.yaml  tasks.yaml
vcdiligence/templates/: index.html
