[project]
name = "vcdiligence"
version = "0.1.0"
description = "VCDueDiligenceAgent - Autonomous VC Due Diligence Agent"
authors = [{ name = "DealScout AI Team", email = "info@vcdiligenceagent.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.3.0",
    "litellm",
    "fastapi",
    "uvicorn",
    "jinja2",
    "requests",
    "beautifulsoup4",
    "duckduckgo-search",
    "pydantic",
    "python-dotenv",
    "sqlalchemy",
    "bcrypt",
    "pyjwt",
    "playwright",
    "reportlab",
    "celery",
    "redis",
    "apscheduler",
]

[project.scripts]
vcdiligence = "vcdiligence.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
